# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml
.github/page_analyzer/: __init__.py  app.py
.github/workflows/: lint.yml
code/: Makefile  gunicorn.conf.py
code/page_analyzer/: __init__.py  app.py
code/page_analyzer/templates/: base.html
page_analyzer/: __init__.py  app.py  html_parser.py  normalize.py  repository.py
page_analyzer/code/: app.py
page_analyzer/templates/: all_urls.html  base.html  index.html  url_info.html
