[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bootstrap-flask>=2.5.0",
    "flask>=3.1.3",
    "gunicorn>=25.1.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "validators>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pylint>=4.0.5",
    "ruff>=0.15.7",
]

[project.scripts]
page-analyzer = "page_analyzer.app:main"
